objects/student__c.object
<CustomObject>
    <fields>
        <fullName>School_Name__c</fullName>
        <description>This is list of  All Government Board</description>
        <label>School Name</label>
        <picklist>
            <picklistValues>
                <fullName>State Board</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Institute of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishop School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>admission_date__c</fullName>
        <label>admission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_Id__c</fullName>
        <label>ext Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>student-{0000}</displayFormat>
        <label>student id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <recordTypes>
        <fullName>Government_Student</fullName>
        <active>true</active>
        <description>this record for government school student</description>
        <label>Government Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_Student</fullName>
        <active>true</active>
        <description>Record for private school student</description>
        <label>Private Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>